--- a/Lemonade_Stand/Lemonade_Stand.csproj
+++ b/Lemonade_Stand/Lemonade_Stand.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Customer.cs" />
     <Compile Include="Day.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="Goods.cs" />
+    <Compile Include="Commodity.cs" />
     <Compile Include="Ice.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="Lemon.cs" />
